docs/versions/4.22/groups/M1.md
---
layout: group
group_id: M1
version: "4.22"
---

> **No remediation needed on RHCOS 9.8+ (OCP 4.22+).** These checks PASS on vanilla RHCOS 9.8 due to hardened OS defaults shipped in that version. Older RHCOS versions (9.6 and earlier) still require remediation. Verified with compliance-operator v1.8.2 and pinned content [quay.io/bapalm/k8scontent:v0.1.80](https://quay.io/repository/bapalm/k8scontent).

## Overview

This remediation applies comprehensive SSH daemon hardening settings to improve security posture.

## Settings

| Setting | Value | Description |
|---------|-------|-------------|
| `PermitRootLogin` | `no` | Disable direct root SSH access |
| `GSSAPIAuthentication` | `no` | Disable GSSAPI authentication |
| `IgnoreRhosts` | `yes` | Disable rhost authentication |
| `IgnoreUserKnownHosts` | `yes` | Ignore user's known_hosts file |
| `PermitUserEnvironment` | `no` | Block user environment variable passing |
| `StrictModes` | `yes` | Enable strict mode checking |
| `PrintLastLog` | `yes` | Display last login information |

## Implementation

The remediation applies a MachineConfig with SSHD hardening:

```yaml
apiVersion: machineconfiguration.openshift.io/v1
kind: MachineConfig
metadata:
  name: 75-sshd-medium
  labels:
    machineconfiguration.openshift.io/role: master
spec:
  config:
    ignition:
      version: 3.2.0
    storage:
      files:
        - path: /etc/ssh/sshd_config.d/75-medium-hardening.conf
          mode: 0600
          overwrite: true
          contents:
            inline: |
              # MEDIUM severity SSHD settings
              PermitRootLogin no
              GSSAPIAuthentication no
              IgnoreRhosts yes
              IgnoreUserKnownHosts yes
              PermitUserEnvironment no
              StrictModes yes
              PrintLastLog yes
```

## Compliance Checks Remediated

This group addresses 7 compliance checks:

| Check | Profile | Description | Docs |
|-------|---------|-------------|------|
| `rhcos4-e8-worker-sshd-disable-root-login` | E8 | Disable root SSH login | [📖](https://github.com/ComplianceAsCode/content/tree/master/linux_os/guide/services/ssh/ssh_server/sshd_disable_root_login) |
| `rhcos4-e8-worker-sshd-disable-gssapi-auth` | E8 | Disable GSSAPI authentication | [📖](https://github.com/ComplianceAsCode/content/tree/master/linux_os/guide/services/ssh/ssh_server/sshd_disable_gssapi_auth) |
| `rhcos4-e8-worker-sshd-disable-rhosts` | E8 | Disable rhosts authentication | [📖](https://github.com/ComplianceAsCode/content/tree/master/linux_os/guide/services/ssh/ssh_server/sshd_disable_rhosts) |
| `rhcos4-e8-worker-sshd-disable-user-known-hosts` | E8 | Ignore user known_hosts | [📖](https://github.com/ComplianceAsCode/content/tree/master/linux_os/guide/services/ssh/ssh_server/sshd_disable_user_known_hosts) |
| `rhcos4-e8-worker-sshd-do-not-permit-user-env` | E8 | Block user environment | [📖](https://github.com/ComplianceAsCode/content/tree/master/linux_os/guide/services/ssh/ssh_server/sshd_do_not_permit_user_env) |
| `rhcos4-e8-worker-sshd-enable-strictmodes` | E8 | Enable strict modes | [📖](https://github.com/ComplianceAsCode/content/tree/master/linux_os/guide/services/ssh/ssh_server/sshd_enable_strictmodes) |
| `rhcos4-e8-worker-sshd-print-last-log` | E8 | Print last login | [📖](https://github.com/ComplianceAsCode/content/tree/master/linux_os/guide/services/ssh/ssh_server/sshd_print_last_log) |

<div class="source-files">
<h4>Source Remediation Files</h4>
<ul>
<li>medium/rhcos4-e8-worker-sshd-disable-root-login.yaml</li>
<li>medium/rhcos4-e8-worker-sshd-disable-gssapi-auth.yaml</li>
<li>medium/rhcos4-e8-worker-sshd-disable-rhosts.yaml</li>
<li>medium/rhcos4-e8-worker-sshd-disable-user-known-hosts.yaml</li>
<li>medium/rhcos4-e8-worker-sshd-do-not-permit-user-env.yaml</li>
<li>medium/rhcos4-e8-worker-sshd-enable-strictmodes.yaml</li>
<li>medium/rhcos4-e8-worker-sshd-print-last-log.yaml</li>
</ul>
</div>

## Verification

After applying the MachineConfig, verify SSHD settings:

```bash
oc debug node/<node-name> -- chroot /host sshd -T | grep -E "permitrootlogin|gssapiauthentication|ignorerhosts"
# Expected output:
# permitrootlogin no
# gssapiauthentication no
# ignorerhosts yes
```

## Related SSHD Groups

Other SSHD hardening groups:
- [H3: SSHD Empty Passwords](H3.html) - HIGH severity (in progress)
- [L1: SSHD LogLevel](L1.html) - LOW severity (pending)
